// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules case \`class-names\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`class-names\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`class-names\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".class-1, .class-10 .bar-1 {
	color: green;
}
",
    "",
  ],
]
`;

exports[`modules case \`class-names\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`class-names\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`class-names\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "bar-1": "_bar-1",
  "class-1": "_class-1",
  "class-10": "_class-10",
}
`;

exports[`modules case \`class-names\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._class-1, ._class-10 ._bar-1 {
	color: green;
}
",
    "",
  ],
]
`;

exports[`modules case \`class-names\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`class-names\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`class-names\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`class-names\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `Object {}`;

exports[`modules case \`class-names\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`class-names\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`class-names\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`class-names\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "bar-1": "_bar-1",
  "class-1": "_class-1",
  "class-10": "_class-10",
}
`;

exports[`modules case \`class-names\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`comment-in-local\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`comment-in-local\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
}
`;

exports[`modules case \`comment-in-local\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1/*.c2*/._c3 { background: red; }
",
    "",
  ],
]
`;

exports[`modules case \`comment-in-local\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`comment-in-local\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`comment-in-local\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
}
`;

exports[`modules case \`comment-in-local\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1/*.c2*/._c3 { background: red; }
",
    "",
  ],
]
`;

exports[`modules case \`comment-in-local\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`comment-in-local\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`comment-in-local\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`comment-in-local\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
}
`;

exports[`modules case \`comment-in-local\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`comment-in-local\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`comment-in-local\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`comment-in-local\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
}
`;

exports[`modules case \`comment-in-local\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`comments\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`comments\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`comments\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "/*
 * a ' above
 */

.bg {
  background-image: url(/webpack/public/path/img.png);
}

/*
 * a ' below
 */
",
    "",
  ],
]
`;

exports[`modules case \`comments\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`comments\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`comments\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "bg": "_bg",
}
`;

exports[`modules case \`comments\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "/*
 * a ' above
 */

._bg {
  background-image: url(/webpack/public/path/img.png);
}

/*
 * a ' below
 */
",
    "",
  ],
]
`;

exports[`modules case \`comments\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`comments\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`comments\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`comments\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `Object {}`;

exports[`modules case \`comments\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`comments\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`comments\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`comments\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "bg": "_bg",
}
`;

exports[`modules case \`comments\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`composes\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2 _c1",
}
`;

exports[`modules case \`composes\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1 { a: 1; }
._c2 { b: 1; }
",
    "",
  ],
]
`;

exports[`modules case \`composes\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`composes\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2 _c1",
}
`;

exports[`modules case \`composes\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1 { a: 1; }
._c2 { b: 1; }
",
    "",
  ],
]
`;

exports[`modules case \`composes\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`composes\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`composes\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2 _c1",
}
`;

exports[`modules case \`composes\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`composes\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`composes\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2 _c1",
}
`;

exports[`modules case \`composes\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-1\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-1\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "c1": "_c1 _c2",
  "c3": "_c3 _c1 _c2",
  "c5": "_c5 _c2 _c4",
}
`;

exports[`modules case \`composes-1\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._c2 {
  color: red;
}

._c4 {
  color: blue;
}

.test{
  c: d
}
",
    "",
  ],
  Array [
    1,
    "._c1 { b: 1; }
._c3 { b: 3; }
._c5 { b: 5; }
",
    "",
  ],
]
`;

exports[`modules case \`composes-1\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-1\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-1\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "c1": "_c1 _c2",
  "c3": "_c3 _c1 _c2",
  "c5": "_c5 _c2 _c4",
}
`;

exports[`modules case \`composes-1\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._c2 {
  color: red;
}

._c4 {
  color: blue;
}

._test{
  c: d
}
",
    "",
  ],
  Array [
    1,
    "._c1 { b: 1; }
._c3 { b: 3; }
._c5 { b: 5; }
",
    "",
  ],
]
`;

exports[`modules case \`composes-1\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-1\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-1\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`composes-1\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1 _c2",
  "c3": "_c3 _c1 _c2",
  "c5": "_c5 _c2 _c4",
}
`;

exports[`modules case \`composes-1\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-1\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-1\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`composes-1\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1 _c2",
  "c3": "_c3 _c1 _c2",
  "c5": "_c5 _c2 _c4",
}
`;

exports[`modules case \`composes-1\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-2\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-2\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "c1": "_c1 _c-2",
  "c3": "_c3 _c1 _c-2",
  "c5": "_c5 _c-2 _c4",
}
`;

exports[`modules case \`composes-2\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._c-2 {
  color: red;
}

._c4 {
  color: blue;
}

.test{
  c: d
}
",
    "",
  ],
  Array [
    1,
    "._c1 { b: 1; }
._c3 { b: 3; }
._c5 { b: 5; }
",
    "",
  ],
]
`;

exports[`modules case \`composes-2\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-2\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-2\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "c1": "_c1 _c-2",
  "c3": "_c3 _c1 _c-2",
  "c5": "_c5 _c-2 _c4",
}
`;

exports[`modules case \`composes-2\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._c-2 {
  color: red;
}

._c4 {
  color: blue;
}

._test{
  c: d
}
",
    "",
  ],
  Array [
    1,
    "._c1 { b: 1; }
._c3 { b: 3; }
._c5 { b: 5; }
",
    "",
  ],
]
`;

exports[`modules case \`composes-2\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`composes-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1 _c-2",
  "c3": "_c3 _c1 _c-2",
  "c5": "_c5 _c-2 _c4",
}
`;

exports[`modules case \`composes-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`composes-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1 _c-2",
  "c3": "_c3 _c1 _c-2",
  "c5": "_c5 _c-2 _c4",
}
`;

exports[`modules case \`composes-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-multiple\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-multiple\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "abc": "_abc _def1 _def2",
}
`;

exports[`modules case \`composes-multiple\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._def1 {
  color: red;
}
",
    "",
  ],
  Array [
    3,
    "._def2 {
  color: blue;
}
",
    "",
  ],
  Array [
    1,
    "._abc {
}
",
    "",
  ],
]
`;

exports[`modules case \`composes-multiple\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-multiple\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-multiple\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "abc": "_abc _def1 _def2",
}
`;

exports[`modules case \`composes-multiple\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._def1 {
  color: red;
}
",
    "",
  ],
  Array [
    3,
    "._def2 {
  color: blue;
}
",
    "",
  ],
  Array [
    1,
    "._abc {
}
",
    "",
  ],
]
`;

exports[`modules case \`composes-multiple\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-multiple\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-multiple\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`composes-multiple\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "abc": "_abc _def1 _def2",
}
`;

exports[`modules case \`composes-multiple\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-multiple\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-multiple\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`composes-multiple\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "abc": "_abc _def1 _def2",
}
`;

exports[`modules case \`composes-multiple\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-with-importing\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-with-importing\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "abc": "_abc _def",
}
`;

exports[`modules case \`composes-with-importing\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._def {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "._abc {
}
",
    "",
  ],
]
`;

exports[`modules case \`composes-with-importing\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-with-importing\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-with-importing\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "abc": "_abc _def",
}
`;

exports[`modules case \`composes-with-importing\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._def {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "._abc {
}
",
    "",
  ],
]
`;

exports[`modules case \`composes-with-importing\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-with-importing\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-with-importing\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`composes-with-importing\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "abc": "_abc _def",
}
`;

exports[`modules case \`composes-with-importing\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`composes-with-importing\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`composes-with-importing\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`composes-with-importing\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "abc": "_abc _def",
}
`;

exports[`modules case \`composes-with-importing\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`declaration-value\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`declaration-value\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "blue": "red",
}
`;

exports[`modules case \`declaration-value\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a {
  border: 1px solid red;
}
",
    "",
  ],
]
`;

exports[`modules case \`declaration-value\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`declaration-value\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`declaration-value\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "a": "_a",
  "blue": "red",
}
`;

exports[`modules case \`declaration-value\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a {
  border: 1px solid red;
}
",
    "",
  ],
]
`;

exports[`modules case \`declaration-value\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`declaration-value\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`declaration-value\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`declaration-value\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "blue": "red",
}
`;

exports[`modules case \`declaration-value\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`declaration-value\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`declaration-value\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`declaration-value\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "a": "_a",
  "blue": "red",
}
`;

exports[`modules case \`declaration-value\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`keyframes-and-animation\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`keyframes-and-animation\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`keyframes-and-animation\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a {
	color: green;
}

@keyframes bounce {
	0% {
		transform: translateY(-100%);
		opacity: 0;
	}
	5% {
		transform: translateY(-100%);
		opacity: 0;
	}
}

@-webkit-keyframes bounce2 {
	0% {
		transform: translateY(-100%);
		opacity: 0;
	}
	5% {
		transform: translateY(-100%);
		opacity: 0;
	}
}

.bounce {
	animation-name: bounce;
	animation: bounce2 1s ease;
}

.bounce2 {
	color: green;
	animation: bounce 1s ease;
	animation-name: bounce2;
}

.bounce3 {
	animation: bounce 1s ease, bounce2
}

.bounce4 {
	animation: bounce 1s ease, bounce2;
}

.b {
	color: green;
}
",
    "",
  ],
]
`;

exports[`modules case \`keyframes-and-animation\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`keyframes-and-animation\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`keyframes-and-animation\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "bounce": "_bounce",
  "bounce2": "_bounce2",
  "bounce3": "_bounce3",
  "bounce4": "_bounce4",
}
`;

exports[`modules case \`keyframes-and-animation\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a {
	color: green;
}

@keyframes _bounce {
	0% {
		transform: translateY(-100%);
		opacity: 0;
	}
	5% {
		transform: translateY(-100%);
		opacity: 0;
	}
}

@-webkit-keyframes _bounce2 {
	0% {
		transform: translateY(-100%);
		opacity: 0;
	}
	5% {
		transform: translateY(-100%);
		opacity: 0;
	}
}

._bounce {
	animation-name: _bounce;
	animation: _bounce2 1s ease;
}

._bounce2 {
	color: green;
	animation: _bounce 1s ease;
	animation-name: _bounce2;
}

._bounce3 {
	animation: _bounce 1s ease, _bounce2
}

._bounce4 {
	animation: _bounce 1s ease, _bounce2;
}

._b {
	color: green;
}
",
    "",
  ],
]
`;

exports[`modules case \`keyframes-and-animation\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`keyframes-and-animation\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`keyframes-and-animation\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`keyframes-and-animation\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `Object {}`;

exports[`modules case \`keyframes-and-animation\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`keyframes-and-animation\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`keyframes-and-animation\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`keyframes-and-animation\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "bounce": "_bounce",
  "bounce2": "_bounce2",
  "bounce3": "_bounce3",
  "bounce4": "_bounce4",
}
`;

exports[`modules case \`keyframes-and-animation\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`leak-scope\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`leak-scope\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`leak-scope\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a {
	color: green;
	animation: a;
}

@keyframes b {
	0% { left: 10px; }
	100% { left: 20px; }
}

.b {
	animation: b;
}

@keyframes c {
	0% { left: 10px; }
	100% { left: 20px; }
}

.c {
	animation: c1;
	animation: c2, c3, c4;
}

@keyframes d {
	0% { left: 10px; }
	100% { left: 20px; }
}

.d1 {
	animation: d1;
	animation: d2, d3, d4;
}

.d2 {
	animation: d2;
}
",
    "",
  ],
]
`;

exports[`modules case \`leak-scope\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`leak-scope\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`leak-scope\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "c": "_c",
  "c1": "_c1",
  "c2": "_c2",
  "c3": "_c3",
  "c4": "_c4",
  "d2": "_d2",
}
`;

exports[`modules case \`leak-scope\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a {
	color: green;
	animation: _a;
}

@keyframes _b {
	0% { left: 10px; }
	100% { left: 20px; }
}

._b {
	animation: _b;
}

@keyframes c {
	0% { left: 10px; }
	100% { left: 20px; }
}

._c {
	animation: _c1;
	animation: _c2, _c3, _c4;
}

@keyframes d {
	0% { left: 10px; }
	100% { left: 20px; }
}

.d1 {
	animation: d1;
	animation: d2, d3, d4;
}

.d2 {
	animation: _d2;
}
",
    "",
  ],
]
`;

exports[`modules case \`leak-scope\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`leak-scope\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`leak-scope\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`leak-scope\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `Object {}`;

exports[`modules case \`leak-scope\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`leak-scope\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`leak-scope\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`leak-scope\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "c": "_c",
  "c1": "_c1",
  "c2": "_c2",
  "c3": "_c3",
  "c4": "_c4",
  "d2": "_d2",
}
`;

exports[`modules case \`leak-scope\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`local\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`local\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "def": "_def",
  "ghi": "_ghi",
  "jkl": "_jkl",
}
`;

exports[`modules case \`local\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".abc ._def {
  color: red;
}

._ghi ._jkl {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`modules case \`local\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`local\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`local\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "abc": "_abc",
  "def": "_def",
  "ghi": "_ghi",
  "jkl": "_jkl",
}
`;

exports[`modules case \`local\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._abc ._def {
  color: red;
}

._ghi ._jkl {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`modules case \`local\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`local\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`local\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`local\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "def": "_def",
  "ghi": "_ghi",
  "jkl": "_jkl",
}
`;

exports[`modules case \`local\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`local\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`local\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`local\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "abc": "_abc",
  "def": "_def",
  "ghi": "_ghi",
  "jkl": "_jkl",
}
`;

exports[`modules case \`local\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-2\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`local-2\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "className": "_className",
  "someId": "_someId",
  "subClass": "_subClass",
}
`;

exports[`modules case \`local-2\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._className { background: red; }
#_someId { background: green; }
._className ._subClass { color: green; }
#_someId ._subClass { color: blue; }
",
    "",
  ],
]
`;

exports[`modules case \`local-2\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-2\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`local-2\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "className": "_className",
  "someId": "_someId",
  "subClass": "_subClass",
}
`;

exports[`modules case \`local-2\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._className { background: red; }
#_someId { background: green; }
._className ._subClass { color: green; }
#_someId ._subClass { color: blue; }
",
    "",
  ],
]
`;

exports[`modules case \`local-2\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`local-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`local-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "className": "_className",
  "someId": "_someId",
  "subClass": "_subClass",
}
`;

exports[`modules case \`local-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`local-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`local-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "className": "_className",
  "someId": "_someId",
  "subClass": "_subClass",
}
`;

exports[`modules case \`local-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-and-composes\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`local-and-composes\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "abc": "_abc",
  "def": "_def _abc",
}
`;

exports[`modules case \`local-and-composes\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._abc {
  color: red;
}
._def {
  background: green;
}
",
    "",
  ],
]
`;

exports[`modules case \`local-and-composes\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-and-composes\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`local-and-composes\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "abc": "_abc",
  "def": "_def _abc",
}
`;

exports[`modules case \`local-and-composes\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._abc {
  color: red;
}
._def {
  background: green;
}
",
    "",
  ],
]
`;

exports[`modules case \`local-and-composes\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-and-composes\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`local-and-composes\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`local-and-composes\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "abc": "_abc",
  "def": "_def _abc",
}
`;

exports[`modules case \`local-and-composes\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-and-composes\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`local-and-composes\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`local-and-composes\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "abc": "_abc",
  "def": "_def _abc",
}
`;

exports[`modules case \`local-and-composes\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-with-string\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`local-with-string\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
  "c4": "_c4",
}
`;

exports[`modules case \`local-with-string\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1[data-attr=\\".c2)]'\\"]:not(._c3):not(._c4) {
  background: red;
}
",
    "",
  ],
]
`;

exports[`modules case \`local-with-string\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-with-string\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`local-with-string\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
  "c4": "_c4",
}
`;

exports[`modules case \`local-with-string\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1[data-attr=\\".c2)]'\\"]:not(._c3):not(._c4) {
  background: red;
}
",
    "",
  ],
]
`;

exports[`modules case \`local-with-string\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-with-string\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`local-with-string\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`local-with-string\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
  "c4": "_c4",
}
`;

exports[`modules case \`local-with-string\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`local-with-string\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`local-with-string\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`local-with-string\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c3": "_c3",
  "c4": "_c4",
}
`;

exports[`modules case \`local-with-string\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`media\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`media\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "small": "(max-width: 599px)",
}
`;

exports[`modules case \`media\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "@media (max-width: 599px) {
  .header {
    box-shadow: 0 0 4px #1F4F7F;
  }
}
",
    "",
  ],
]
`;

exports[`modules case \`media\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`media\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`media\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "header": "_header",
  "small": "(max-width: 599px)",
}
`;

exports[`modules case \`media\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "@media (max-width: 599px) {
  ._header {
    box-shadow: 0 0 4px #1F4F7F;
  }
}
",
    "",
  ],
]
`;

exports[`modules case \`media\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`media\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`media\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`media\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "small": "(max-width: 599px)",
}
`;

exports[`modules case \`media\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`media\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`media\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`media\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "header": "_header",
  "small": "(max-width: 599px)",
}
`;

exports[`modules case \`media\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`media-2\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`media-2\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "small": "(max-width: 599px)",
}
`;

exports[`modules case \`media-2\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    "@media (max-width: 599px) {
  .header {
    box-shadow: 0 0 4px #1F4F7F;
  }
}
",
    "",
  ],
]
`;

exports[`modules case \`media-2\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`media-2\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`media-2\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "header": "_header",
  "small": "(max-width: 599px)",
}
`;

exports[`modules case \`media-2\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    "@media (max-width: 599px) {
  ._header {
    box-shadow: 0 0 4px #1F4F7F;
  }
}
",
    "",
  ],
]
`;

exports[`modules case \`media-2\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`media-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`media-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`media-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "small": "(max-width: 599px)",
}
`;

exports[`modules case \`media-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`media-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`media-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`media-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "header": "_header",
  "small": "(max-width: 599px)",
}
`;

exports[`modules case \`media-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`mode-switching\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`mode-switching\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "c2": "_c2",
  "c3": "_c3",
  "c5": "_c5",
  "c7": "_c7",
}
`;

exports[`modules case \`mode-switching\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".c1 ._c2 ._c3 .c4 ._c5, .c6 ._c7 { background: red; }
.c8 { background: red; }
",
    "",
  ],
]
`;

exports[`modules case \`mode-switching\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`mode-switching\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`mode-switching\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2",
  "c3": "_c3",
  "c5": "_c5",
  "c6": "_c6",
  "c7": "_c7",
  "c8": "_c8",
}
`;

exports[`modules case \`mode-switching\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._c1 ._c2 ._c3 .c4 ._c5, ._c6 ._c7 { background: red; }
._c8 { background: red; }
",
    "",
  ],
]
`;

exports[`modules case \`mode-switching\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`mode-switching\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`mode-switching\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`mode-switching\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "c2": "_c2",
  "c3": "_c3",
  "c5": "_c5",
  "c7": "_c7",
}
`;

exports[`modules case \`mode-switching\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`mode-switching\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`mode-switching\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`mode-switching\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "c1": "_c1",
  "c2": "_c2",
  "c3": "_c3",
  "c5": "_c5",
  "c6": "_c6",
  "c7": "_c7",
  "c8": "_c8",
}
`;

exports[`modules case \`mode-switching\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`simple\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`simple\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`simple\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a .b, .c .d, #id {
	color: green;
	font-size: 1.5pt;
}
a[href=\\"#b.c\\"].x.y {
	color: green;
	font-size: 1.5pt;
}
@keyframes z {
  2.5% {color: green;}
}
",
    "",
  ],
]
`;

exports[`modules case \`simple\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`simple\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`simple\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "c": "_c",
  "d": "_d",
  "id": "_id",
  "x": "_x",
  "y": "_y",
  "z": "_z",
}
`;

exports[`modules case \`simple\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a ._b, ._c ._d, #_id {
	color: green;
	font-size: 1.5pt;
}
a[href=\\"#b.c\\"]._x._y {
	color: green;
	font-size: 1.5pt;
}
@keyframes _z {
  2.5% {color: green;}
}
",
    "",
  ],
]
`;

exports[`modules case \`simple\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`simple\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`simple\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`simple\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `Object {}`;

exports[`modules case \`simple\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`simple\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`simple\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`simple\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "a": "_a",
  "b": "_b",
  "c": "_c",
  "d": "_d",
  "id": "_id",
  "x": "_x",
  "y": "_y",
  "z": "_z",
}
`;

exports[`modules case \`simple\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`urls\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`urls\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`urls\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a {
	background: url(/webpack/public/path/img.png);
	background: url(/webpack/public/path/img.png);
	background: url(\\"/webpack/public/path/img img.png\\");
	background: url(\\"/webpack/public/path/img img.png\\");
	background: url(/webpack/public/path/img.png);
	background: url(/webpack/public/path/img.png#?iefix);
	background: url(\\"#hash\\");
	background: url(\\"#\\");
	background: url(data:image/png;base64,AAA);
	background: url(http://example.com/image.jpg);
	background: url(//example.com/image.png);
	background: green url(data:image/png;base64,AAA) url(http://example.com/image.jpg) url(//example.com/image.png) url(/webpack/public/path/img.png) url(\\"/webpack/public/path/img img.png\\") xyz;
}
",
    "",
  ],
]
`;

exports[`modules case \`urls\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`urls\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`urls\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "a": "_a",
}
`;

exports[`modules case \`urls\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a {
	background: url(/webpack/public/path/img.png);
	background: url(/webpack/public/path/img.png);
	background: url(\\"/webpack/public/path/img img.png\\");
	background: url(\\"/webpack/public/path/img img.png\\");
	background: url(/webpack/public/path/img.png);
	background: url(/webpack/public/path/img.png#?iefix);
	background: url(\\"#hash\\");
	background: url(\\"#\\");
	background: url(data:image/png;base64,AAA);
	background: url(http://example.com/image.jpg);
	background: url(//example.com/image.png);
	background: green url(data:image/png;base64,AAA) url(http://example.com/image.jpg) url(//example.com/image.png) url(/webpack/public/path/img.png) url(\\"/webpack/public/path/img img.png\\") xyz;
}
",
    "",
  ],
]
`;

exports[`modules case \`urls\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`urls\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`urls\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`urls\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `Object {}`;

exports[`modules case \`urls\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`urls\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`urls\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`urls\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "a": "_a",
}
`;

exports[`modules case \`urls\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
  "ccc": "red",
}
`;

exports[`modules case \`values\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".a {
	background: red;
	background: green;
	background: red;
}
",
    "",
  ],
]
`;

exports[`modules case \`values\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "a": "_a",
  "aaa": "red",
  "bbb": "green",
  "ccc": "red",
}
`;

exports[`modules case \`values\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._a {
	background: red;
	background: green;
	background: red;
}
",
    "",
  ],
]
`;

exports[`modules case \`values\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`values\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
  "ccc": "red",
}
`;

exports[`modules case \`values\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`values\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "a": "_a",
  "aaa": "red",
  "bbb": "green",
  "ccc": "red",
}
`;

exports[`modules case \`values\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-1\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-1\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "def": "red",
  "ghi": "1px solid black",
}
`;

exports[`modules case \`values-1\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "
",
    "",
  ],
]
`;

exports[`modules case \`values-1\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-1\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-1\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "def": "red",
  "ghi": "1px solid black",
}
`;

exports[`modules case \`values-1\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "
",
    "",
  ],
]
`;

exports[`modules case \`values-1\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-1\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-1\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`values-1\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "def": "red",
  "ghi": "1px solid black",
}
`;

exports[`modules case \`values-1\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-1\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-1\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`values-1\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "def": "red",
  "ghi": "1px solid black",
}
`;

exports[`modules case \`values-1\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-2\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-2\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "def": "red",
}
`;

exports[`modules case \`values-2\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".ghi { color: red; }
",
    "",
  ],
]
`;

exports[`modules case \`values-2\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-2\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-2\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "def": "red",
  "ghi": "_ghi",
}
`;

exports[`modules case \`values-2\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._ghi { color: red; }
",
    "",
  ],
]
`;

exports[`modules case \`values-2\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`values-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "def": "red",
}
`;

exports[`modules case \`values-2\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`values-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "def": "red",
  "ghi": "_ghi",
}
`;

exports[`modules case \`values-2\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-3\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-3\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "def": "red",
}
`;

exports[`modules case \`values-3\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    ".ghi { color: red; }
",
    "",
  ],
]
`;

exports[`modules case \`values-3\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-3\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-3\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "def": "red",
  "ghi": "_ghi",
}
`;

exports[`modules case \`values-3\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    "._ghi { color: red; }
",
    "",
  ],
]
`;

exports[`modules case \`values-3\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-3\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-3\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`values-3\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "def": "red",
}
`;

exports[`modules case \`values-3\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-3\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-3\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`values-3\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "def": "red",
  "ghi": "_ghi",
}
`;

exports[`modules case \`values-3\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-4\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-4\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
}
`;

exports[`modules case \`values-4\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    3,
    "
",
    "",
  ],
  Array [
    1,
    ".ghi { background: red, green, def; }
",
    "",
  ],
]
`;

exports[`modules case \`values-4\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-4\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-4\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
  "ghi": "_ghi",
}
`;

exports[`modules case \`values-4\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    3,
    "
",
    "",
  ],
  Array [
    1,
    "._ghi { background: red, green, def; }
",
    "",
  ],
]
`;

exports[`modules case \`values-4\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-4\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-4\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`values-4\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
}
`;

exports[`modules case \`values-4\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-4\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-4\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`values-4\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "aaa": "red",
  "bbb": "green",
  "ghi": "_ghi",
}
`;

exports[`modules case \`values-4\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-5\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-5\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red,0 0 red",
}
`;

exports[`modules case \`values-5\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    ".ghi { box-shadow: 0 0 red,0 0 red; }
",
    "",
  ],
]
`;

exports[`modules case \`values-5\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-5\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-5\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red,0 0 red",
}
`;

exports[`modules case \`values-5\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    "._ghi { box-shadow: 0 0 red,0 0 red; }
",
    "",
  ],
]
`;

exports[`modules case \`values-5\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-5\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-5\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`values-5\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red,0 0 red",
}
`;

exports[`modules case \`values-5\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-5\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-5\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`values-5\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red,0 0 red",
}
`;

exports[`modules case \`values-5\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-6\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-6\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red ,0 0 red",
}
`;

exports[`modules case \`values-6\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    ".ghi { box-shadow: 0 0 red ,0 0 red; }
",
    "",
  ],
]
`;

exports[`modules case \`values-6\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-6\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-6\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red ,0 0 red",
}
`;

exports[`modules case \`values-6\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    "._ghi { box-shadow: 0 0 red ,0 0 red; }
",
    "",
  ],
]
`;

exports[`modules case \`values-6\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-6\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-6\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`values-6\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red ,0 0 red",
}
`;

exports[`modules case \`values-6\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-6\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-6\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`values-6\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red ,0 0 red",
}
`;

exports[`modules case \`values-6\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-7\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-7\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red, 0 0 red",
}
`;

exports[`modules case \`values-7\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    ".ghi { box-shadow: 0 0 red, 0 0 red; }
",
    "",
  ],
]
`;

exports[`modules case \`values-7\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-7\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-7\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red, 0 0 red",
}
`;

exports[`modules case \`values-7\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "
",
    "",
  ],
  Array [
    1,
    "._ghi { box-shadow: 0 0 red, 0 0 red; }
",
    "",
  ],
]
`;

exports[`modules case \`values-7\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-7\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-7\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`values-7\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "color": "red",
  "shadow": "0 0 red, 0 0 red",
}
`;

exports[`modules case \`values-7\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-7\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-7\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`values-7\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "color": "red",
  "ghi": "_ghi",
  "shadow": "0 0 red, 0 0 red",
}
`;

exports[`modules case \`values-7\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-8\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-8\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "shadow-color": "rgba(0, 0, 0, 0.5)",
}
`;

exports[`modules case \`values-8\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".shadow {
  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5),
    10px 0px 5px rgba(0, 0, 0, 0.5);
}
",
    "",
  ],
]
`;

exports[`modules case \`values-8\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-8\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-8\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "shadow": "_shadow",
  "shadow-color": "rgba(0, 0, 0, 0.5)",
}
`;

exports[`modules case \`values-8\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._shadow {
  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5),
    10px 0px 5px rgba(0, 0, 0, 0.5);
}
",
    "",
  ],
]
`;

exports[`modules case \`values-8\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-8\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-8\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`values-8\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "shadow-color": "rgba(0, 0, 0, 0.5)",
}
`;

exports[`modules case \`values-8\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-8\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-8\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`values-8\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "shadow": "_shadow",
  "shadow-color": "rgba(0, 0, 0, 0.5)",
}
`;

exports[`modules case \`values-8\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-9\`: (export \`all\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-9\`: (export \`all\`) (\`modules\` value is \`false)\`: locals 1`] = `
Object {
  "def": "red",
}
`;

exports[`modules case \`values-9\`: (export \`all\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    ".foo1 {
  prop: func(red);
}

.foo2 {
  prop: func(10px red);
}

.foo3 {
  prop: func(red 10px);
}

.foo4 {
  prop: func(10px red 10px);
}

.foo5 {
  prop: func(10px, red);
}

.foo6 {
  prop: func(red, 10px);
}

.foo7 {
  prop: func(10px, red, 10px);
}
",
    "",
  ],
]
`;

exports[`modules case \`values-9\`: (export \`all\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-9\`: (export \`all\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-9\`: (export \`all\`) (\`modules\` value is \`true)\`: locals 1`] = `
Object {
  "def": "red",
  "foo1": "_foo1",
  "foo2": "_foo2",
  "foo3": "_foo3",
  "foo4": "_foo4",
  "foo5": "_foo5",
  "foo6": "_foo6",
  "foo7": "_foo7",
}
`;

exports[`modules case \`values-9\`: (export \`all\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._foo1 {
  prop: func(red);
}

._foo2 {
  prop: func(10px red);
}

._foo3 {
  prop: func(red 10px);
}

._foo4 {
  prop: func(10px red 10px);
}

._foo5 {
  prop: func(10px, red);
}

._foo6 {
  prop: func(red, 10px);
}

._foo7 {
  prop: func(10px, red, 10px);
}
",
    "",
  ],
]
`;

exports[`modules case \`values-9\`: (export \`all\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-9\`: (export \`only locals\`) (\`modules\` value is \`false)\`: errors 1`] = `Array []`;

exports[`modules case \`values-9\`: (export \`only locals\`) (\`modules\` value is \`false)\`: locals 1`] = `undefined`;

exports[`modules case \`values-9\`: (export \`only locals\`) (\`modules\` value is \`false)\`: module (evaluated) 1`] = `
Object {
  "def": "red",
}
`;

exports[`modules case \`values-9\`: (export \`only locals\`) (\`modules\` value is \`false)\`: warnings 1`] = `Array []`;

exports[`modules case \`values-9\`: (export \`only locals\`) (\`modules\` value is \`true)\`: errors 1`] = `Array []`;

exports[`modules case \`values-9\`: (export \`only locals\`) (\`modules\` value is \`true)\`: locals 1`] = `undefined`;

exports[`modules case \`values-9\`: (export \`only locals\`) (\`modules\` value is \`true)\`: module (evaluated) 1`] = `
Object {
  "def": "red",
  "foo1": "_foo1",
  "foo2": "_foo2",
  "foo3": "_foo3",
  "foo4": "_foo4",
  "foo5": "_foo5",
  "foo6": "_foo6",
  "foo7": "_foo7",
}
`;

exports[`modules case \`values-9\`: (export \`only locals\`) (\`modules\` value is \`true)\`: warnings 1`] = `Array []`;
